[package]
name = "simulate-svm-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18.26"
solana-program = "1.18.26"
solana-program-runtime = "1.18.26"

litesvm = "0.2.1"
openbook_dex = {version = "0.5.6", features = ["no-entrypoint"] }
anyhow = "1.0.95"
log = "0.4.25"
spl-token = "4.0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.0"
safe-transmute = "0.11.2"